[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
mini-redis = "0.4"
actix = "0.13.0"
actix-web = "4.3.0"
actix-web-actors = "4.2.0"