[package]
name = "socket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"]}
tokio-websockets = "0.2.0"
tokio-util = "0.7.7"
tokio-stream = "0.1.12"
tracing = "0.1.37"
tracing-subscriber ={ version="0.3.16", features = ["env-filter"]}
futures = "0.3.26"
log = "0.4.17"
env_logger = "0.10.0"
# actix = "0.13.0"
# actix-web = "4.3.1"
# actix-web-actors = "4.2.0"
# actix-rt = "2.8.0"
# actix-server = "2.2.0"
# actix-service = "2.0.2"
bytes = "1.4.0"